--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
     "axios": "^1.7.9",
     "react": "^19.0.0",
